Added dropdown styles. Need to further explore valign-center

--- a/rdio.html
+++ b/rdio.html
@@ -18,12 +18,29 @@
             <a class="button float-right">Upgrade</a>
         </div>
         <div class="col-3">
-            <div class="button-group valign-center">
-                <a href="" class="button link">David Khourshid</a>
-                <a href="" id="settings" class="button link rdio-icon">&nbsp;</a>
-                <a href="" id="notifications" class="button link rdio-icon">&nbsp;</a>
-                <a href="" id="people" class="button link rdio-icon">&nbsp;</a>
+            <div class="row valign-center">
+                <a href="" class="button link inline">David Khourshid</a>
+                <div class="dropdown-container">
+                    <a href="" id="settings" class="button link inline rdio-icon">&nbsp;</a>
+                    <ul class="dropdown right">
+                        <li><a href="">Settings</a></li>
+                        <li><a href="">Take a Tour of Rdio</a></li>
+                        <li class="hr"></li>
+                        <li><a href="">Help...</a></li>
+                        <li><a href="">Apps...</a></li>
+                        <li><a href="">About Rdio...</a></li>
+                        <li><a href="">Legal Terms...</a></li>
+                        <li class="hr"></li>
+                        <li><a href="">Sign Out</a></li>
+                    </ul>
+                    <div class="dropdown content hidden">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque, quo animi ex dicta deserunt facilis similique ut praesentium impedit odio. Labore ipsam at nesciunt dicta quo eveniet tempora omnis hic!</p>
+                    </div>
+                </div>
+                <a href="" id="notifications" class="button link inline rdio-icon">&nbsp;</a>
+                <a href="" id="people" class="button link inline rdio-icon">&nbsp;</a>
             </div>
+        </div>
     </header>
     <section id="main">
         <aside class="content">
