--- a/rdio.html
+++ b/rdio.html
@@ -16,7 +16,7 @@
                 <input type="text" name="" id="">
             </form>
             <div class="col-right valign-center-all">
-                <a class="button inline">Upgrade</a>
+                <a class="button inline"><span>Upgrade</span><span class="badge top-right secondary">10</span></a>
             </div>
         </div>
         <div class="col-3">
