--- a/sandbox.html
+++ b/sandbox.html
@@ -6,21 +6,55 @@
     <link rel="stylesheet" href="css/cadenza.css">
 </head>
 <body class="layer scroll">
-    <article class="page">
-        <header class="row-2">
-            <button class="col-8">&lt; $50.86 (#42.38 + $8.48 tip)</button>
-            <button class="col-2">Clear</button>
-            <button class="col-2">Continue</button>
-        </header>
-        <section class="row-2 content align-center">
-            <div class="button-group inline full-height">
-                <button>No tip</button>
-                <button>10%</button>
-                <button>15%</button>
-                <button>20%</button>
-                <button>Custom</button>
+    <header class="row-1">
+        <div class="col-3 valign-center-all align-center">
+            <h1>Simpl<strong>est</strong></h1>
+        </div>
+        <div class="col-flex">
+            <div class="col-7 valign-center-all">
+                <h6>Overview</h6>
             </div>
+            <div class="col-flex valign-center-all">
+                blah.
+            </div>
+        </div>
+    </header>
+    <section class="row-11">
+        <aside class="col-3 theme-dark">
+            <nav>
+                <ul class="align-center">
+                    <li><a href="#">Profile</a></li>
+                    <li><a href="#">Email</a></li>
+                    <li><a href="#">Docs</a></li>
+                    <li class="active"><a href="#">Stats</a></li>
+                </ul>
+            </nav>
+            <div class="align-center valign-bottom"><button class="inline">My Account</button></div>
+        </aside>
+        <section class="col-flex">
+            <div class="row-6">
+                <h5>AUDIENCE</h5>
+                <nav class="horizontal row-1">
+                    <ul>
+                        <li><a href="#">Hour</a></li>
+                        <li><a href="#">Day</a></li>
+                        <li class="active"><a href="#">Week</a></li>
+                        <li><a href="#">Month</a></li>
+                        <li><a href="#">Year</a></li>
+                    </ul>
+                </nav>
+           </div>
+           <div class="row-3">
+               <div class="col valign-center-all">
+                   <h5>Details</h5>
+               </div>
+           </div>
+           <div class="row-3">
+               <div class="col valign-center-all">
+                   <h5>Geography</h5>
+               </div>
+           </div>
         </section>
-    </article>
+    </section>
 </body>
 </html>
