--- a/training.html
+++ b/training.html
@@ -6,32 +6,84 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/train.css">
 </head>
-<body>
-    <header class="content">
-        <hgroup class="col-5">
-            <h1>REDFIGURE TRAINING</h1>
-        </hgroup>
-        <nav class="col-7 horizontal">
-            <ul>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Pricing</a></li>
-                <li><a href="#">FAQs</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-    <section>
-        <aside class="content">
-            <form id="login" class="row theme-light content">
-                <fieldset>
-                    <legend>
-                        <h2>Login</h2>
-                    </legend>
-                </fieldset>
-            </form>
-        </aside>
-        <section class="content">right</section>
+<body class="page">
+    <aside class="col-4 rows-gutter">
+        <div class="row-4"><div class="full">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia officiis dolorum fugit possimus eius deleniti nihil. Laborum, vero non blanditiis. Odio, dicta, minus nam temporibus laborum fugit totam eum veritatis.</div></div>
+        <div class="row-4"><div class="full">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, magni, odit, pariatur quam ullam ex hic inventore reiciendis asperiores similique repellendus provident culpa assumenda labore aperiam at nisi recusandae qui!</div></div>
+        <div class="row-4"><div class="full">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, id, cupiditate numquam molestiae reiciendis culpa quasi laboriosam perspiciatis nesciunt nobis vel at natus hic rerum nisi neque porro? Debitis, voluptatem.</div></div>
+    </aside>
+    <section class="col-flex">
+        <header class="row-1 content">
+            <nav class="horizontal">
+                <ul>
+                    <li><a href="">LINK 1</a></li>
+                    <li><a href="">LINK 2</a></li>
+                    <li><a href="">LINK 3</a></li>
+                    <li><a href="">LINK 4</a></li>
+                    <li><a href="">LINK 5</a></li>
+                </ul>
+            </nav>
+        </header>
+        <section class="row columns-gutter" id="content">
+            <div class="col-4"><div class="full">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, autem, error accusantium commodi alias laborum molestias excepturi nostrum doloribus quis nisi laudantium fugiat et odit aliquam? Sequi sunt dolorem vel.</div></div>
+            <div class="col-4"><div class="full">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, eius animi eaque impedit veritatis dolorem vitae maxime consequatur natus ex earum nemo cum sed a officia ullam provident iusto neque.</div></div>
+            <div class="col-4"><div class="full">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, non, ipsa, impedit nobis totam sit incidunt rerum vitae consequuntur ea odio deserunt consectetur dolore beatae voluptatum. Dignissimos iure in a.</div></div>
+            <div id="workout" class="content hide">
+                <hgroup>                
+                    <h6>Workout View</h6>
+                    <h1>Monday, Feb. 3rd</h1>
+                </hgroup>
+                <div class="row-4"></div>
+                <br>
+                <div class="row">
+                    <div class="col-6"><h6>Goals</h6></div>
+                    <div class="col-6">
+                        <span class="label light">MONTH</span>
+                        <span class="label primary">WEEK</span>
+                        <span class="label light">DAY</span>
+                    </div>
+                </div>
+                <hgroup>
+                    <h3>Distance Ran: <span class="alpha">3.14 mi</span> / <span class="omega">30 mi</span></h3>
+                    <h3>Average Pace: <span class="alpha">7:06 min/mi</span> / <span class="omega">6:55 min/mi</span></h3>
+                </hgroup>
+                <br>
+                <h6>Today's Workout  <div class="badge">3</div></h6>
+                <ul class="clean">
+                    <li>
+                        <span>5 x two min. at goal 5K pace</span>
+                        <ul>
+                            <li><small>Jog for 90 sec. to recover between intervals</small></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <span>6 x 800 meters on the track at goal 5K pace</span>
+                        <ul>
+                            <li><small>Jog 500 meters for recovery</small></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <span>3 x 1-mile run on the track at goal 5K pace</span>
+                        <ul>
+                            <li><small>Jog 1 min. to recover between sets</small></li>
+                        </ul>
+                    </li>
+                </ul>
+                <br>
+                <h6>Coach's Notes  <div class="badge">2</div></h6>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod, eum, eligendi id quis nesciunt necessitatibus cum distinctio fuga labore laudantium. Nesciunt dolor sapiente tempora obcaecati veritatis neque id placeat aut.</p>
+                <p>Listen, you promise me something, OK? Just if you're ever in trouble, don't be brave. You just run, OK? Just run away.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod, voluptate, molestiae, veritatis sint sunt quae adipisci provident voluptatum blanditiis quas maiores ullam fugiat autem esse rem cumque odit delectus dolorem.</p>
+            </div>
+        </section>
+        <section class="row-12 content">
+            <div class="button-group">
+                <button>#1</button>
+                <button>#2</button>
+                <button>#3</button>
+            </div>
+            <div class="alert">Oh hey there!!</div>
+        </section>
     </section>
-    <footer></footer>
 </body>
 </html>
