Added gulp file, started new scaffolding (will eventually be a separate branch per module)

--- a/index.html
+++ b/index.html
@@ -2,148 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Cadenza</title>
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/fi_airlines.css">
+    <title>Sandbox</title>
+    <link rel="stylesheet" href="css/cadenza.css">
+
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+
 </head>
-
 <body>
-    <header class="min">
-        <div class="page" id="header-1">
-            <div class="col-8 col-9-large">
-                <form class="full"><input type="text" text="" class="full large" placeholder="Search Flights, Promotions, and Travel tips"></form>
-            </div>
-            <nav class="col-4 col-3-large horizontal full">
-                <ul>
-                    <li class="col-2"><a href="#">GL</a></li>
-                    <li class="col-5"><a href="#">Login</a></li>
-                    <li class="col-5"><a href="#">Help/Support</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-    <section>
-        <article class="page">
-            <section class="col-8 col-9-large">
-                <article id="slider" class="page content hidden">
-                     <div class="popup">
-                             <div class="popup-thumbnail">
-                                 <small>From USD</small>
-                                 <strong>305</strong>
-                             </div>
-                             <div class="popup-content">
-                                 <nav>
-                                     <ul>
-                                         <li><a href="#">See the full Trip</a></li>
-                                         <li><a href="#">Share this Trip</a></li>
-                                         <li><a href="#">Book directly</a></li>
-                                     </ul>
-                                 </nav>
-                             </div>
-                         </div>
-                     <div class="row-4 row-bottom">
-                         <div class="col-9 content">
-                             <h2>We fly to more than 70 <br>destinations in Northern Europe</h2>
-                         </div>
-                         <div class="col-3 content">
-                             <h3 class="stacked">From USD</h3>
-                             <h1>$640</h1>
-                         </div>
-                     </div>
-                </article>
-                <article id="map" class="page content">
-                    <div class="col-1">
-                        <button class="primary block">All<br>▾</button>
-
-                        <div class="button-group vertical block light">
-                            <button>+</button>
-                            <button>|<br>|<br>|<br>|<br>|<br>|<br>|<br>|<br></button>
-                            <button>-</button>
-                        </div>
-                    </div>
-                </article>
-                <article class="page" id="location">
-                    <div class="col-8"></div>
-                    <div class="col-4" id="location-sidebar">
-                        <header class="row-3 content">
-                            <h1>Paris, France</h1>
-                            <div class="row">
-                                <div class="col-8">
-                                    <ul>
-                                        <li>2 Nights in a 3-Star Hotel</li>
-                                        <li>Round Trip Flight</li>
-                                        <li>2 Adults</li>
-                                    </ul>
-                                </div>
-                                <div class="col-4">
-                                    <h2 class="align-right"><small>USD</small><br>$450</h2>
-                                </div>
-                            </div>
-                        </header>
-                        <nav class="row-1 horizontal">
-                            <ul>
-                                <li><a href="#">The City</a></li>
-                                <li><a href="#">The Hotel</a></li>
-                                <li><a href="#">The Flight</a></li>
-                            </ul>
-                        </nav>
-                        <div class="row-8 content scroll">
-                            <div class="">
-                                <h2>About Paris</h2>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia, incidunt, culpa, temporibus eaque recusandae officiis fuga autem quas velit dolore illum repudiandae quia. Repellendus fugit blanditiis quisquam minus perspiciatis! Dignissimos.</p>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, optio, incidunt, nisi aspernatur assumenda iste fugiat iure nam consequatur quis culpa nostrum dignissimos est temporibus commodi vero laboriosam obcaecati repellat!</p>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, qui, esse, beatae nemo commodi enim ducimus laboriosam nulla quae culpa nihil reprehenderit corporis architecto dicta quod ullam optio. Vel, quae!</p>
-                            </div>
-                        </div>
-                    </div>
-                </article>
-            </section> 
-            <section id="sidebar" class="col-4 col-3-large">
-                <article class="page" id="sb-1">
-                    <header class="row-3 content">
-                        <h3 class="stacked">Welcome to</h3>
-                        <h1>Innovation<br>Airlines</h1>
-                    </header>
-                    <section class="row-flex content">
-                        <form>
-                            <fieldset>
-                                <legend><h3>Book a flight</h3></legend>
-                                <div class="field fi-text">
-                                    <div class="popup icon"></div>
-                                    <label for="book-from">From</label><input type="text" name="book.from" id="book-from" placeholder="Enter City or Airport">
-                                </div>
-                                <div class="field fi-text">
-                                    <div class="popup icon blue"></div>
-                                    <label for="book-to">To</label><input type="text" name="book.to" id="book-to" placeholder="Enter City or Airport">
-                                </div>
-                            </fieldset>
-                        </form>
-                    </section>
-                </article>
-            </section>
-        </article>
-    </section>
-    <section>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis, cumque pariatur nam saepe suscipit sit dolor illum ex deserunt perspiciatis. Quasi, quia, incidunt earum laudantium molestiae quos minus asperiores sunt.</section>
-    <footer>
-        <div class="page" id="footer-1">
-            <nav class="col-8 col-9-large horizontal full secondary">
-                <ul>
-                    <li class="col-2"><a href="#" class="large">Fly</a></li>
-                    <li class="col-2"><a href="#" class="large">Cruise</a></li>
-                    <li class="col-2"><a href="#" class="large">Drive</a></li>
-                    <li class="col-2"><a href="#" class="large">Sleep</a></li>
-                </ul>
-            </nav>
-            <nav class="col-flex horizontal full secondary">
-                <ul>
-                    <li class="col-4"><a href="#">Check-in</a></li>
-                    <li class="col-4"><a href="#">Find Booking</a></li>
-                    <li class="col-4"><a href="#">Flight Status</a></li>
-                </ul>
-            </nav>
-        </div>
-    </footer>
+    <div class="column float-left">asdf</div>
+    <div class="column float-left">asdf</div>
+    <div class="column float-left">asdff</div>
+    <div class="column float-left">asdf</div>
 </body>
-
-</html>
