--- a/modules/type.html
+++ b/modules/type.html
@@ -7,5 +7,6 @@
 </head>
 <body class="layer scroll">
 	<h2>Hey there <span>smallll</span></h2>
+	<div class="row-1 text-middle"><span>foobar!</span></div>
 </body>
 </html>
