Adding kbd styles

--- a/modules/type.html
+++ b/modules/type.html
@@ -8,5 +8,6 @@
 <body class="layer scroll">
 	<h2>Hey there <span>smallll</span></h2>
 	<div class="row-1 text-middle"><span>foobar!</span></div>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia, perferendis, unde ullam <kbd>k</kbd> fugit saepe eius reprehenderit rem similique tenetur amet officia eos tempora animi enim recusandae accusamus hic facere.</p>
 </body>
 </html>
