--- a/modules/type.html
+++ b/modules/type.html
@@ -8,6 +8,18 @@
 <body class="layer scroll">
 	<h2>Hey there <span>smallll</span></h2>
 	<div class="row-1 text-middle"><span>foobar!</span></div>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia, perferendis, unde ullam <kbd>k</kbd> fugit saepe eius reprehenderit rem similique tenetur amet officia eos tempora animi enim recusandae accusamus hic facere.</p>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia, perferendis, unde ullam <kbd>k</kbd> fugit saepe eius reprehenderit rem similique tenetur amet officia eos tempora <code>animi enim</code> recusandae accusamus hic facere.</p>
+	<blockquote class="right">
+		<p>lorem</p>
+		<footer>Someone important named <cite>Abroham Linksys</cite></footer>
+	</blockquote>
+	<q>hello <q>faggot</q> there</q>
+	<q class="double">hello there</q>
+	<q class="single">hello there</q>
+	<q class="arrow-double">hello there</q>
+	<q class="arrow-single">hello there</q>
+	<q class="low-double">hello there</q>
+	<q class="low-single">hello there</q>
+
 </body>
 </html>
