--- a/modules/forms.html
+++ b/modules/forms.html
@@ -6,6 +6,10 @@
 	<link rel="stylesheet" href="../css/cadenza.css">
 </head>
 <body class="layer scroll">
-
+	<div class="col-4">
+		<h6>Input Element</h6>
+		<input type="text" name="" id="" class="inline"> <input type="text" name="" id="" class="inline">
+		<textarea name="" id="" cols="30" rows="10"></textarea>
+	</div>
 </body>
 </html>
