Adding variables for form module

--- a/modules/forms.html
+++ b/modules/forms.html
@@ -8,8 +8,14 @@
 <body class="layer scroll">
 	<div class="col-4">
 		<h6>Input Element</h6>
-		<input type="text" name="" id="" class="inline"> <input type="text" name="" id="" class="inline">
+		<input type="text" name="" id="" class="inline large"><input type="text" name="" id="" class="inline">
 		<textarea name="" id="" cols="30" rows="10"></textarea>
+        <div class="row" id="foobar">
+            <button>25%</button>
+            <input type="text" name="" id="">
+            <button>30%</button>
+            <label for="">eeeek!</label>
+        </div>
 	</div>
 </body>
 </html>
