More work on buttons + transparent style/theme

--- a/modules/forms.html
+++ b/modules/forms.html
@@ -16,6 +16,24 @@
             <button>30%</button>
             <label for="">eeeek!</label>
         </div>
+        <a class="button">hi there</button>
+        <a class="button secondary">secondary</a>
+        <a class="button light">light</a>
+        <a class="button dark">dark</a>
+        <button class="primary">primary</button>
+        <button class="secondary">secondary</button>
+        <button class="light">light</button>
+        <button class="dark quiet">dark</button>
+        <button class="quiet">shhh!</button>
+        <button class="small">I'm small</button>
+        <button class="tiny">i'm tiny</button>
+        <button class="large">I'm large</button>
+        <button class="huge">I'm huge</button>
+        <div class="button-group vertical">
+        	<button class="secondary">button 1</button>
+        	<button class="secondary">button 2 is realllyy fucking long</button>
+        	<button class="secondary">button 3</button>
+        </div>
 	</div>
 </body>
 </html>
