Added anchor styles to type module

--- a/modules/forms.html
+++ b/modules/forms.html
@@ -8,6 +8,7 @@
 <body class="layer scroll">
 	<div class="col-4">
 		<h6>Input Element</h6>
+		<a href="sadfj">I'm an anchor!</a>
 		<input type="text" name="" id="" class="inline large"><input type="text" name="" id="" class="inline">
 		<textarea name="" id="" cols="30" rows="10"></textarea>
         <div class="row" id="foobar">
