Adding panel styles

--- a/modules/forms.html
+++ b/modules/forms.html
@@ -7,7 +7,7 @@
 </head>
 <body class="layer scroll">
 	<div class="col-4">
-		<h6>Input Element</h6>
+<!-- 		<h6>Input Element</h6>
 		<a href="sadfj">I'm an anchor!</a>
 		<input type="text" name="" id="" class="inline large"><input type="text" name="" id="" class="inline">
 		<textarea name="" id="" cols="30" rows="10"></textarea>
@@ -34,6 +34,12 @@
         	<button class="secondary">button 1</button>
         	<button class="secondary">button 2 is realllyy fucking long</button>
         	<button class="secondary">button 3</button>
+        </div> -->
+
+        <div class="panel">
+        	<header><h1>hey there</h1></header>
+        	<section>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, nemo, dolor dignissimos tempore similique cumque ad assumenda molestias velit fuga magnam officia ab error ipsum veniam enim minima praesentium quam?</section>
+        	<footer>footer stuff</footer>
         </div>
 	</div>
 </body>
