Alert Styling (panels module)

--- a/modules/forms.html
+++ b/modules/forms.html
@@ -41,6 +41,12 @@
         	<section>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, nemo, dolor dignissimos tempore similique cumque ad assumenda molestias velit fuga magnam officia ab error ipsum veniam enim minima praesentium quam?</section>
         	<footer>footer stuff</footer>
         </div>
+
+        <div class="alert dark">
+            <h1>help me</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, et, blanditiis, quas est quasi possimus temporibus autem dolorem nesciunt odio voluptatum id ut culpa dolore exercitationem esse harum accusantium doloremque.</p>
+            <a href="#">I'm an anchor</a>
+        </div>
 	</div>
 </body>
 </html>
