Panels and alerts updates

--- a/modules/forms.html
+++ b/modules/forms.html
@@ -42,11 +42,22 @@
         	<footer>footer stuff</footer>
         </div>
 
-        <div class="alert dark">
-            <h1>help me</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, et, blanditiis, quas est quasi possimus temporibus autem dolorem nesciunt odio voluptatum id ut culpa dolore exercitationem esse harum accusantium doloremque.</p>
-            <a href="#">I'm an anchor</a>
+        <div class="alert">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia, iusto, aut nesciunt unde itaque labore dignissimos consequuntur odit officia pariatur repellendus sunt. Animi, odit id dignissimos libero laboriosam impedit eligendi!</p>
         </div>
+
+        <div class="alert-group">        
+            <div class="alert light">
+                <h1>help me</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, et, blanditiis, quas est quasi possimus temporibus autem dolorem nesciunt odio voluptatum id ut culpa dolore exercitationem esse harum accusantium doloremque.</p>
+                <a href="#">I'm an anchor</a>
+            </div>
+            <div class="alert light">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo, officia, magni, in, natus dolores iure cumque consectetur qui odit necessitatibus aut doloremque odio laboriosam esse soluta minus ratione nihil ex!</p>
+            </div>
+        </div>
+
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi, voluptatem, molestiae pariatur vel nihil voluptates delectus nesciunt autem alias quidem quas placeat id tempore odit optio quia eveniet asperiores facere?
 	</div>
 </body>
 </html>
