--- a/modules/forms.html
+++ b/modules/forms.html
@@ -36,6 +36,18 @@
         	<button class="secondary">button 3</button>
         </div> -->
 
+		<div class="row-6">		
+	        <nav class="">
+	        	<ul>
+	        		<li><a href="#"><span>Item 1</span><span class="label">hey</span></a></li>
+	        		<li><a href="#">Item 2</a></li>
+	        		<li><a href="#">Item 3</a></li>
+	        		<li><a href="#">Item 4</a></li>
+	        		<li><a href="#">Item 5</a></li>
+	        	</ul>
+	        </nav>
+		</div>
+
         <div class="panel">
         	<header><h1>hey there</h1></header>
         	<section>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, nemo, dolor dignissimos tempore similique cumque ad assumenda molestias velit fuga magnam officia ab error ipsum veniam enim minima praesentium quam?</section>
