Nav module styling continued

--- a/modules/forms.html
+++ b/modules/forms.html
@@ -36,8 +36,9 @@
         	<button class="secondary">button 3</button>
         </div> -->
 
-		<div class="row-6">		
-	        <nav class="">
+		<div class="row-12">
+            <h2>Light list <code>nav.light</code></h2>
+	        <nav class="light">
 	        	<ul>
 	        		<li><a href="#"><span>Item 1</span><span class="label">hey</span></a></li>
 	        		<li><a href="#">Item 2</a></li>
@@ -46,6 +47,17 @@
 	        		<li><a href="#">Item 5</a></li>
 	        	</ul>
 	        </nav>
+
+            <h2>Dark list <code>nav.primary</code></h2>
+            <nav class="primary">
+                <ul>
+                    <li><a href="#"><span>Item 1</span><span class="label">hey</span></a></li>
+                    <li><a href="#">Item 2</a></li>
+                    <li><a href="#">Item 3</a></li>
+                    <li><a href="#">Item 4</a></li>
+                    <li><a href="#">Item 5</a></li>
+                </ul>
+            </nav>
 		</div>
 
         <div class="panel">
