--- a/modules/forms.html
+++ b/modules/forms.html
@@ -53,9 +53,20 @@
                     <li><a href="#"><span>Item 1</span><span class="label">hey</span></a></li>
                     <li><a href="#">Item 2</a></li>
                     <li><a href="#">Item 3</a></li>
+                    <li class="separator"></li>
                     <li><a href="#">Item 4</a></li>
                     <li><a href="#">Item 5</a></li>
                 </ul>
+            </nav>
+
+            <nav class="tabs">
+            	<ul>
+            		<li><a href="">Item 1</a></li>
+            		<li><a href="">Item 2</a></li>
+            		<li><a href="">Item 3</a></li>
+            		<li><a href="">Item 4</a></li>
+            		<li><a href="">Item 5</a></li>
+            	</ul>
             </nav>
 		</div>
 
