--- a/modules/forms.html
+++ b/modules/forms.html
@@ -70,19 +70,21 @@
             </nav>
 		</div>
 
-		<div class="dropdown-container" style="margin-left: 50px">
-			<a href="#" class="button">Hey there!</a>
-			<nav class="below-right">
-				<ul>
-					<li><a href="">Item 1</a></li>
-					<li><a href="">Item 2</a></li>
-					<li><a href="">Item 3</a></li>
-					<li class="hr"></li>
-					<li><a href="">Item 4</a></li>
-					<li><a href="">Item 5</a></li>
-				</ul>
-			</nav>
-		</div>
+
+        <div class="button-group">
+            <button>stuff</button>
+            <button>ather</button>
+            <button class="dropdown-container">
+                <span>dropdown!</span>
+                <ul class="dropdown below-left">
+                    <li><a href="">Item #</a></li>
+                    <li><a href="">Item #</a></li>
+                    <li><a href="">Item #</a></li>
+                    <li><a href="">Item #</a></li>
+                </ul>
+            </button>
+            <button>hey</button>
+        </div>
 
         <div class="panel">
         	<header><h1>hey there</h1></header>
