Adding labels module

--- a/modules/forms.html
+++ b/modules/forms.html
@@ -37,7 +37,7 @@
         </div> -->
 
 		<div class="row-12">
-	        <nav class="secondary">
+	        <nav class="light">
 	        	<ul>
 	        		<li><a href="#"><span>Item 1</span><span class="label">hey</span></a></li>
 	        		<li><a href="#">Item 2</a></li>
@@ -55,7 +55,7 @@
                     <li><a href="#">Item 3</a></li>
                     <li class="separator"></li>
                     <li><a href="#">Item 4</a></li>
-                    <li><a href="#">Item 5</a></li>
+                    <li><span class="badge top-left">39</span><a href="#">Item 5</a></li>
                 </ul>
             </nav>
 
@@ -70,6 +70,7 @@
             </nav>
 		</div>
 
+        <button><span>Hello World</span><span class="badge top-right secondary">69</span></button>
 
         <div class="button-group">
             <button>stuff</button>
